--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ tipos de serviços!
             </p>
             <div class="socials">
                 <a href="https://instagram.com/u.romaoficial"><i class="ri-instagram-line"></i></a>
-                <a href="https://www.linkedin.com/in/jeisiel-erick"><i class="ri-linkedin-line"></i></a>
+                <a href="https://www.linkedin.com/in/jeisiel-erick-b1a135299"><i class="ri-linkedin-line"></i></a>
                 <a href="https://github.com/erickmachine"><i class="ri-github-line"></i></a>
                 <a href="https://wa.me/559299652961"><i class="ri-whatsapp-line"></i></a>
     
